--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -112,6 +112,7 @@
 \include{chapter3}
 \include{chapter4}
 \include{chapter5}
+\include{chapter6}
 
 
 % These commands fix an odd problem in which the bibliography line
