--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -30,6 +30,8 @@
 \usepackage{tabularx}
 \usepackage{siunitx}
 \usepackage{amssymb}
+\usepackage{epstopdf}
+
 
 
 % plainpages=false fixes the "duplicate ignored" error with page counters
