--- a/dissertation/chapter4.tex
+++ b/dissertation/chapter4.tex
@@ -2,7 +2,7 @@
 
 
 \chapter{Resistive pulse studies of aspherical mesoparticles}
-\label{chap:rod}
+\label{chap:rods}
 	
 
 	\section{Background \& Theory}
