--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -115,6 +115,7 @@
 \include{chapter4}
 \include{chapter5}
 \include{chapter6}
+\include{chapter7}
 
 
 % These commands fix an odd problem in which the bibliography line
